Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon
Valerio Pilo
Chris Caudle

---------------------------
  Jackdmp changes log
---------------------------

2011-06-10 Stephane Letz  <letz@grame.fr>

	* SaveConnections/RestoreConnections in NetDriver.

2011-06-09 Stephane Letz  <letz@grame.fr>

	* Correct NetJack2 connection handling

2011-05-27 Stephane Letz  <letz@grame.fr>

	* Correct rd_acquire in dbus code.

2011-05-16 Stephane Letz  <letz@grame.fr>

	* Correct OSX real-time thread setup.

2011-05-11 Stephane Letz  <letz@grame.fr>

	* Correct MIDI in NetJack2.

2011-05-05 Stephane Letz  <letz@grame.fr>

	* Libjacknet in progress.

2011-05-02 Stephane Letz  <letz@grame.fr>

	* Merge branch 'switch-master-port-registration-notifications : correct driver port registration.

2011-04-21 Stephane Letz  <letz@grame.fr>

	* CELT code for NetJack2.

2011-04-20 Stephane Letz  <letz@grame.fr>

	* Add XRun detection in PortAudio driver.

2011-04-18 Stephane Letz  <letz@grame.fr>

	* JackWeakAPI.cpp renamed in JackWeakAPI.c.

2011-04-04 Stephane Letz  <letz@grame.fr>

	* Correct driver lifetime management.

2011-04-03 Stephane Letz  <letz@grame.fr>

	* Fix in JackCoreAudioDriver::Read when there is no inputs.

2011-04-02 Stephane Letz  <letz@grame.fr>

	* Netdriver can now ask for in/out values from the master (in progress).
	* Correct drivers parameter settings.

2011-04-01 Stephane Letz  <letz@grame.fr>

	* Merge newer-midi branch (Devin Anderson redesign of the MIDI drivers: alsarawmidi, ffado, coremidi and winmme).
	* Cleanup JackThreadedDriver::Stop.
	* Correct JackNetOneDriver::Close.
	* Correction in jackdmp.cpp: notify_server_stop should be done after server destruction.
	* Improve error management in JackNetDriver. 

2011-03-30 Stephane Letz  <letz@grame.fr>

	* Version 1.9.8 started. 

2011-03-29 Stephane Letz  <letz@grame.fr>
