@@ -57,6 +57,8 @@ class SERVER_EXPORT JackAudioDriver : public JackDriver
 
         bool fWithMonitorPorts;
 
+        std::list<std::pair<std::string, std::string> > fConnections;		// Connections list
+
         jack_default_audio_sample_t* GetInputBuffer(int port_index);
         jack_default_audio_sample_t* GetOutputBuffer(int port_index);
         jack_default_audio_sample_t* GetMonitorBuffer(int port_index);
@@ -104,6 +106,9 @@ class SERVER_EXPORT JackAudioDriver : public JackDriver
 
         virtual int SetBufferSize(jack_nframes_t buffer_size);
         virtual int SetSampleRate(jack_nframes_t sample_rate);
+
+        virtual void SaveConnections();
+        virtual void RestoreConnections();
 
         virtual int ClientNotify(int refnum, const char* name, int notify, int sync, const char* message, int value1, int value2);
 
